# GCDecompiler

./: .gitignore  .gitmodules  AlphaTest.cmake  CMakeLists.txt  Cargo.toml  LICENSE  README.md  appveyor.yml  setup.bat  setup.sh
GCDecompiler/: Import.cpp  Import.h  RelType.h  Relocation.cpp  Relocation.h  Section.cpp  Section.h  argparser.cpp  argparser.h  dol.cpp  dol.h  gcd_main.cpp  gcd_main.h  import.cpp  import.h  logging.cpp  logging.h  lz.cpp  lz.h  ppc_codes.cpp  ppc_codes.h  ppc_reader.cpp  ppc_reader.h  rel.cpp  rel.h  rel_reader.cpp  rel_reader.h  relocation.cpp  section.cpp  section.h  tpl.cpp  tpl.h  types.h  utils.cpp  utils.h
GCDecompiler/filetypes/: dol.cpp  dol.h  image.cpp  image.h  lz.cpp  lz.h  png.cpp  png.h  rel.cpp  rel.h  stagedef.cpp  stagedef.h  tpl.cpp  tpl.h
GCDecompiler/ppc/: codes.h  instruction.cpp  instruction.h  ppc_reader.cpp  ppc_reader.h  register.cpp  register.h  symbol.cpp  symbol.h
cmake/: uninstall.cmake
crates/gcd/: Cargo.toml
crates/gcd-parser/: Cargo.toml  README.md
crates/gcd-parser/src/: _example.rs  combinator.rs  consume.rs  error.rs  file.rs  lib.rs  parse.rs  primitives.rs
crates/gcd-tpl/: Cargo.toml
crates/gcd-tpl/src/: lib.rs  parser.rs
crates/gcd-utils/: Cargo.toml
crates/gcd-utils/src/: lib.rs  multi_range.rs  tlist.rs
crates/gcd/src/: main.rs
include/: gcd_main.h  relocation.h  section.h
include/datatypes/: color.h  image.h  stageobjects.h
include/filetypes/: imagetype.h  imagetype.tpp  lz.h  png.h  rel.h  stagedef.h  tpl.h
include/ppc/: codes.h  decompiler.h  disassembler.h  instruction.h  ppc_reader.h  register.h  symbol.h
libs/include/: argparser.h  at_logging  at_tests  at_utils  console.h  format.h  types.h
libs/include/logging/: handler.h  level.h  logger.h  logging.h
libs/include/tests/: abstract_test.h  test.h
libs/include/utils/: algorithms.h  arrays.h  arrays.tpp  bytes.h  bytes.tpp  io.h  io.tpp  strmanip.h  strmanip.tpp
src/: gcd_main.cpp  relocation.cpp  relocation.h  section.cpp  section.h
src/datatypes/: color.cpp  image.cpp  stageobjects.cpp
src/filetypes/: dol.cpp  image.cpp  image.h  imagetype.cpp  lz.cpp  png.cpp  rel.cpp  stagedef.cpp  tpl.cpp
src/ppc/: decompiler.cpp  disassembler.cpp  instruction.cpp  instruction.h  ppc_reader.cpp  register.cpp  symbol.cpp
test/: main.cpp  test_instructions.cpp
test/datatypes/: test_color.cpp
test/filetypes/: test_png.cpp  test_tpl.cpp
test/ppc/: test_instructions.cpp  test_instructions.h  test_registers.cpp  test_symbols.cpp
tests/: main.cpp
tests/datatypes/: test_color.h
tests/filetypes/: test_png.h  test_tpl.cpp  test_tpl.h
tests/ppc/: test_instructions.cpp  test_registers.cpp  test_registers.h  test_symbols.h
