[package]
name = "gcd-tpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17"
itertools = "0.10"
bitvec = "1.0"
gcd-utils = { path = "../gcd-utils" }
gcd-parser = { path = "../gcd-parser" }
