[package]
name = "gcd"
authors = ["CraftSpider"]
description = "Tooling for hacking on gamecube decompilation and reversing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gcd-tpl = { path = "../gcd-tpl" }
